--- a/lib/_core/_colors.sass
+++ b/lib/_core/_colors.sass
@@ -22,6 +22,7 @@ den-2: #2c3e50,
 xam-1: #f2f2f2,
 xam-2: #7f8c8d,
 xam-3: #666666,
+xam-4: #d4d4d4,
 hong-1: #ff9ff3,
 hong-2: #f368e0,
 trang: #ffffff,
