--- a/lib/ankhanhjvc/t-1/index.pug
+++ b/lib/ankhanhjvc/t-1/index.pug
@@ -4,7 +4,7 @@ section.canhcam-jvc-1
 		.row
 			.col-lg-6
 				.text
-					p Việt Nam đang chứng kiến những bước chuyển mình mạnh mẽ. Hà Nội đang chứng kiến một sự thay đổi ở phía Tây. Tại đó một điển hình về môi trường sống mới – tiện nghi hơn, trong lành hơn đang dần hình thành.
+					p <i class="fas fa-quote-left"></i> Việt Nam đang chứng kiến những bước chuyển mình mạnh mẽ. Hà Nội đang chứng kiến một sự thay đổi ở phía Tây. Tại đó một điển hình về môi trường sống mới – tiện nghi hơn, trong lành hơn đang dần hình thành.
 					p Công ty Liên doanh TNHH Phát triển Đô thị mới An Khánh (An Khánh JVC) chào mừng quý vị tới Splendora – Khu độ thị mới tráng lệ với đầy đủ mọi tiện nghi trong tầm tay tại phía Tây Hà Nội.
 					p Là sự hợp tác toàn diện giữa hai tập đoàn xây dựng hàng đầu Vinaconex của Việt Nam và Posco E&C của Hàn Quốc, Công ty Liên doanh TNHH Phát triển Đô thị mới An Khánh (An Khánh JVC) được thành lập với sứ mệnh xây dựng thành công khu đô thị hoàn toàn mới và hiện đại, mang đến môi trường sống đẳng cấp quốc tế tại miền Bắc Việt Nam – Khu đô thị mới Splendora.
 			.col-lg-6
