--- a/lib/ankhanh-breadcrumb/b-1/index.sass
+++ b/lib/ankhanh-breadcrumb/b-1/index.sass
@@ -2,7 +2,6 @@
 //////////////////////////////////////
 // CODE
 //////////////////////////////////////
-
 .canhcam-ankhanh-breadcrumb
 	position: relative
 	color: color-get($mau, trang)
@@ -21,7 +20,7 @@
 		.breadcrumb
 			margin-bottom: 0
 			+bor-rad(0)
-			+pad(.5rem)
+			+pad(0.185rem)
 			position: relative
 			background: none
 			&:before
@@ -43,6 +42,7 @@
 					padding-left: 0
 				a
 					color: color-get($mau,trang)
+					text-decoration: none
 				// breakcrum item here
 				+ .breadcrumb-item
 					&:before
