--- a/lib/ankhanh-footer/f-1/index.sass
+++ b/lib/ankhanh-footer/f-1/index.sass
@@ -5,11 +5,9 @@
 
 .canhcam-ankhanh-footer-f-1
 	background-position: center center
-	+pad(2rem 0)
-	+media-breakpoint-up(lg)
-		+pad(5rem 0 5.71rem)
+	+pad(5rem 0 5.71rem)
 	color: color-get($mau, trang)
-	i 
+	i, .mdi 
 		font-size: 1.07rem
 		padding: 0 0.78rem 0 0
 	.form-group 
