--- a/lib/introduce/quyhoach/q-1/index.pug
+++ b/lib/introduce/quyhoach/q-1/index.pug
@@ -1,5 +1,5 @@
-section.canhcam-project-detail-6#canhcam-detail-section-6
-	.container
+section.canhcam-project-detail-6#canhcam-detail-section-6(bg-img="./img/bg/bg-splendora.png")
+	.container.bg-white
 		.slide
 			h2.title.text-center.text-uppercase.mb-4.mb-lg-5 quy hoạch
 			.row.text-center.text-lg-left.mb-4
