--- a/lib/nav/n-2/index.sass
+++ b/lib/nav/n-2/index.sass
@@ -65,7 +65,7 @@
 					top: 50%
 					width: 1px
 					height: 40px
-					background: darken(color-get($mau,trang),30%)
+					background: color-get($mau,main)
 					right: -3px
 					transform: translate(-50%,-50%)
 				&:last-child
