update navtab for customer-support page

--- a/lib/ankhanh-navbar/n-3/index.pug
+++ b/lib/ankhanh-navbar/n-3/index.pug
@@ -4,7 +4,7 @@ section.canhcam-ankhanh-navbar
 			.col
 				ul.nav.justify-content-center.nav-pills(data-select)
 					li.nav-item.active
-						a.nav-link(href='#') Tin tức nổi bật
+						a.nav-link(href='ankhanh-news.html') Tin tức nổi bật
 					li.nav-item
 						a.nav-link(href='#') Tin dự án
 					li.nav-item
