--- a/templates/ankhanh-customer-support.pug
+++ b/templates/ankhanh-customer-support.pug
@@ -8,6 +8,7 @@ block header
 	include ../lib/header/h-14/index.pug
 block body
 	include ../lib/ankhanh-breadcrumb/b-4/index.pug
+	include ../lib/ankhanh-navbar/n-4/index.pug
 	include ../lib/ankhanh-customer-support/c-1/index.pug
 block footer
 	include ../lib/ankhanh-footer/f-1/index.pug
