--- a/lib/ankhanh-progress/p-1/index.sass
+++ b/lib/ankhanh-progress/p-1/index.sass
@@ -35,7 +35,7 @@ body
 		color: color-get($mau, xam-4)
 	.news-list
 		.item
-			margin-bottom: 2rem
+			margin-bottom: 2.14rem
 			display: block
 			text-decoration: none
 			figure
@@ -113,7 +113,9 @@ body
 			+media-breakpoint-down(md)
 				&:active
 					figcaption.box 
-						padding-left: 1rem
+						background: -moz-linear-gradient( 180deg, rgb(177,131,8) 0%, rgb(242,218,133) 100%)
+						background: -webkit-linear-gradient( 180deg, rgb(177,131,8) 0%, rgb(242,218,133) 100%)
+						background: -ms-linear-gradient( 180deg, rgb(177,131,8) 0%, rgb(242,218,133) 100%)
 						box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.08)
 						h3 
-							color: color-get($mau,main)
+							color: color-get($mau,trang)
