--- a/lib/ankhanh-recruitment/r-2/index.sass
+++ b/lib/ankhanh-recruitment/r-2/index.sass
@@ -22,10 +22,10 @@ section.canhcam-ankhanh-recruitment-r-2
 			+pad(5px)
 			border-radius: 15px
 			+media-breakpoint-up(md)
-				max-width: 45% !important
+				max-width: 47% !important
+				0 1rem
 			+media-breakpoint-down(md)
-				&:first-child
-					margin-bottom: 3rem
+				+mar(1rem)
 		.c
 			background: color-get($mau, trang)
 			width: 100%
@@ -39,7 +39,8 @@ section.canhcam-ankhanh-recruitment-r-2
 			color: color-get($mau, main)
 			z-index: 100
 		h3 
-			+pad(2rem 0 1rem)
+			+mar(0)
+			+pad(2.35rem 0 2.14rem)
 			+fw(400)
 			color: color-get($mau, main)
 			z-index: 100
