--- a/lib/ankhanh-breadcrumb/b-3/index.pug
+++ b/lib/ankhanh-breadcrumb/b-3/index.pug
@@ -1,4 +1,4 @@
-section.canhcam-ankhanh-breadcrumb
+section.canhcam-ankhanh-breadcrumb(bg-img="../img/ankhanh-background/b_3.png")
 	.main-breadcrumb
 		.container
 			ol.breadcrumb
