--- a/lib/ankhanh-breadcrumb/b-1/index.sass
+++ b/lib/ankhanh-breadcrumb/b-1/index.sass
@@ -15,7 +15,7 @@
 		width: 100%
 		display: none
 		z-index: 100
-		+media-breakpoint-up(md)
+		+media-breakpoint-up(lg)
 			display: block
 		.breadcrumb
 			margin-bottom: 0
