--- a/lib/ankhanh-customer-support/c-1/index.sass
+++ b/lib/ankhanh-customer-support/c-1/index.sass
@@ -8,22 +8,22 @@ body
 	+pad(3.5rem 0 2.35rem 0)
 	// Form edit here
 	form
-		border: 1px solid  color-get($mau,main)
-		background: darken(color-get($mau,trang) ,0%)
+		border: 1px solid  color-get($mau-ankhanh,main)
+		background: darken(color-get($mau-ankhanh,trang) ,0%)
 		+pad(2rem)
 		margin-bottom: 1rem !important
 		img 
 			width: 100%
 			max-width: 100%
 		input, textarea, select
-			background: darken(color-get($mau,trang) ,3%)
+			background: darken(color-get($mau-ankhanh,trang) ,3%)
 			+pad(.6rem)
 		label
-			color: color-get($mau, xam-ct)
+			color: color-get($mau-ankhanh, xam-ct)
 			+fw(400)
 		.has-danger
 			input, textarea, select
-				border-color: color-get($mau,do-1)
+				border-color: color-get($mau-ankhanh,do-1)
 		h4 
 			text-align: center
 			font-size: 1.71rem
@@ -33,12 +33,12 @@ body
 		.btn-ankhanh
 			margin-top: 2rem
 			+pad(.5rem)
-			color: color-get($mau, trang)
+			color: color-get($mau-ankhanh, trang)
 			cursor: pointer
 			border-radius: 100px
 			border: none
 			opacity: 1 !important
-			background: color-get($mau, main)
+			background: color-get($mau-ankhanh, main)
 			+media-breakpoint-up(md)
 				&:hover
 					background: -moz-linear-gradient( 180deg, rgb(177,131,8) 0%, rgb(242,218,133) 100%)
@@ -52,19 +52,19 @@ body
 	// Magic edit here
 	.accordion-option
 		display: flex
-		background: darken(color-get($mau,main) ,0%)
+		background: darken(color-get($mau-ankhanh,main) ,0%)
 		margin-bottom: 1rem 
-		border: 1px solid  darken(color-get($mau,main) ,0%)
+		border: 1px solid  darken(color-get($mau-ankhanh,main) ,0%)
 		+pad(.5rem .5rem .5rem 1rem)
 		align-items: center
-		color: color-get($mau,trang)
+		color: color-get($mau-ankhanh,trang)
 		h2 
 			+fw(bold)
 			text-transform: uppercase
-			color: color-get($mau,trang)
+			color: color-get($mau-ankhanh,trang)
 			margin-bottom: 0
 		input
-			border: 1px solid darken(color-get($mau,trang) ,10%)
+			border: 1px solid darken(color-get($mau-ankhanh,trang) ,10%)
 			+pad(.15rem 1rem)
 			outline: none 
 			width: 150px 
@@ -87,31 +87,31 @@ body
 					a 
 						+transition(all .5s ease-in-out)
 						display: flex
-						color: color-get($mau, xam-ct)
+						color: color-get($mau-ankhanh, xam-ct)
 						text-decoration: none
 						.minus-circle
 							img 
 								+transition(all .5s ease-in-out)
 								width: 1.5rem
 								display: none
-								color: color-get($mau,main)
+								color: color-get($mau-ankhanh,main)
 								margin-left: 2rem
 						.plus-circle
 							img 
 								+transition(all .5s ease-in-out)
 								width: 1.5rem
 								display: block
-								color: darken(color-get($mau,trang) ,50%)
+								color: darken(color-get($mau-ankhanh,trang) ,50%)
 								margin-left: 2rem
 			&.active 
 				.card-header
 					border: none !important
 					h4 
 						+fw(500)
-						color: color-get($mau,main-2)
+						color: color-get($mau-ankhanh,main-2)
 						a 
 							+fz(1.57rem)
-							color: color-get($mau,main)
+							color: color-get($mau-ankhanh,main)
 							.minus-circle
 								img 
 									display: block
@@ -119,10 +119,10 @@ body
 								img 
 									display: none
 			.answer
-				background: color-get($mau,xam-cs) !important
+				background: color-get($mau-ankhanh,xam-cs) !important
 				+pad(1.5rem 4rem 2.5rem 3rem)
 				line-height: 2rem
-				color: color-get($mau,den)
+				color: color-get($mau-ankhanh,den)
 				+fz(1.07rem)
 				+fw(100)
 				+mar(0)
@@ -147,26 +147,26 @@ body
 					justify-content: center
 					align-items: center
 					display: flex
-					color: color-get($mau,main)
+					color: color-get($mau-ankhanh,main)
 					+bor-rad(0px)
-					border: 1px solid color-get($mau,main)
+					border: 1px solid color-get($mau-ankhanh,main)
 					+fw(1.28rem)
-					background: color-get($mau,trang)
+					background: color-get($mau-ankhanh,trang)
 					+media-breakpoint-up(md)
 						&:hover
-							color: color-get($mau,trang)
-							background: color-get($mau,main)
-							border: 1px solid color-get($mau,main)
+							color: color-get($mau-ankhanh,trang)
+							background: color-get($mau-ankhanh,main)
+							border: 1px solid color-get($mau-ankhanh,main)
 					+media-breakpoint-down(md)
 						width: 3rem
 						height: 3rem
 						+mar(0 .25rem)
 						&:active
-							color: color-get($mau,trang)		
-							background: color-get($mau,main)
-							border: 1px solid color-get($mau,main)
+							color: color-get($mau-ankhanh,trang)		
+							background: color-get($mau-ankhanh,main)
+							border: 1px solid color-get($mau-ankhanh,main)
 				&.active
 					.page-link
-						color: color-get($mau,trang)
-						background: color-get($mau,main)
-						border: 1px solid color-get($mau,main)
+						color: color-get($mau-ankhanh,trang)
+						background: color-get($mau-ankhanh,main)
+						border: 1px solid color-get($mau-ankhanh,main)
