--- a/lib/ankhanh-news/n-1/index.pug
+++ b/lib/ankhanh-news/n-1/index.pug
@@ -90,5 +90,5 @@ section.canhcam-ankhanh-news-n-1
 										h3 Trường Quốc tế Mỹ St.Paul Hà Nội - Cơn gió mới tại Khu đô thị Splendora
 								p.content Ngay từ những ngày đầu tiên của năm mới 2018, Splendora đã đón nhận một sự kiện quan trọng và đặc biệt có ý nghĩa đối với các gia đình cư dân có con đang đi học, đó là việc Trường Quốc tế Mỹ St. Paul chính thức đi vào hoạt động tại cơ sở ngay trong khuôn viên Giai đoạn 1 của dự án.
 								//- hr
-		//- Panigation
-		include ../../panigation/p-1/index.pug
+		//- ankhanh-Panigation
+		include ../../ankhanh-panigation/p-1/index.pug
