--- a/lib/ankhanh-panigation/p-1/index.sass
+++ b/lib/ankhanh-panigation/p-1/index.sass
@@ -25,26 +25,26 @@
 					justify-content: center
 					align-items: center
 					display: flex
-					color: color-get($mau,main)
+					color: color-get($mau-ankhanh,main)
 					+bor-rad(0px)
-					border: 1px solid color-get($mau,main)
+					border: 1px solid color-get($mau-ankhanh,main)
 					+fw(1.28rem)
-					background: color-get($mau,trang)
+					background: color-get($mau-ankhanh,trang)
 					+media-breakpoint-up(md)
 						&:hover
-							color: color-get($mau,trang)
-							background: color-get($mau,main)
-							border: 1px solid color-get($mau,main)
+							color: color-get($mau-ankhanh,trang)
+							background: color-get($mau-ankhanh,main)
+							border: 1px solid color-get($mau-ankhanh,main)
 					+media-breakpoint-down(md)
 						// width: 3rem
 						// height: 3rem
 						+mar(0 .25rem)
 						&:active
-							color: color-get($mau,trang)		
-							background: color-get($mau,main)
-							border: 1px solid color-get($mau,main)
+							color: color-get($mau-ankhanh,trang)		
+							background: color-get($mau-ankhanh,main)
+							border: 1px solid color-get($mau-ankhanh,main)
 				&.active
 					.page-link
-						color: color-get($mau,trang)
-						background: color-get($mau,main)
-						border: 1px solid color-get($mau,main)
+						color: color-get($mau-ankhanh,trang)
+						background: color-get($mau-ankhanh,main)
+						border: 1px solid color-get($mau-ankhanh,main)
