--- a/lib/ankhanh-progress/p-1/index.pug
+++ b/lib/ankhanh-progress/p-1/index.pug
@@ -69,4 +69,4 @@ section.canhcam-ankhanh-progress-p-1
 									.col-12.title
 										h3 Tháng 06
 		//- Panigation
-		include ../../panigation/p-1/index.pug
+		include ../../ankhanh-panigation/p-1/index.pug
