--- a/lib/ankhanh-recruitment/r-1/index.sass
+++ b/lib/ankhanh-recruitment/r-1/index.sass
@@ -10,17 +10,17 @@ section.canhcam-ankhanh-recruitment-r-1
 		margin-top: 3.5rem
 		margin-bottom: 2rem
 		+fw(600)
-		color: color-get($mau, main)
+		color: color-get($mau-ankhanh, main)
 	table 
 		thead 
-			background: color-get($mau, main)
+			background: color-get($mau-ankhanh, main)
 			border: none
 			tr 
 				border: none
 				th
 					+fz(1.28rem)
 					+fw(400)
-					color: color-get($mau, trang)
+					color: color-get($mau-ankhanh, trang)
 					border: none
 					+pad(.5rem .5rem .5rem .5rem)
 					+media-breakpoint-up(md)
