--- a/lib/ankhanh-resident/r-1/index.pug
+++ b/lib/ankhanh-resident/r-1/index.pug
@@ -91,4 +91,4 @@ section.canhcam-ankhanh-resident-r-1
 								p.content Mùa hè đến là thời điểm các gia đình, đặc biệt là những gia đình có con nhỏ, luôn tìm kiếm các hoạt động bổ ích, nơi các thành viên có thể cùng gắn kết. Hãy cùng xem các cư dân Splendora đã đón hè 2015 như thế nào nhé.
 								//- hr
 		//- Panigation
-		include ../../panigation/p-1/index.pug
+		include ../../ankhanh-panigation/p-1/index.pug
