--- a/lib/ankhanh-navbar/n-1/index.sass
+++ b/lib/ankhanh-navbar/n-1/index.sass
@@ -7,45 +7,45 @@
 	+media-breakpoint-down(md)
 		margin-bottom: 2rem
 	.navbar-2
-		border-bottom: 1px solid color-get($mau,main-3)
+		border-bottom: 1px solid color-get($mau-ankhanh,main-3)
 	.nav-item
 		+transition(all .5s ease-in-out)
 		.nav-link
 			+fz(1.14rem)
 			+fw(400)
-			color: color-get($mau, xam-4)
+			color: color-get($mau-ankhanh, xam-4)
 			text-transform: uppercase
 			+pad(.5rem 2.14rem)
 			border-radius: 0
 			+media-breakpoint-up(md)
 				&:hover
 					background: linear-gradient(-90deg, #b18308 0%, #f2da85 100%)
-					color: color-get($mau, trang) !important
+					color: color-get($mau-ankhanh, trang) !important
 					border: none
 			+media-breakpoint-down(md)
 				&:active
 					background: linear-gradient(-90deg, #b18308 0%, #f2da85 100%)
-					color: color-get($mau, trang) !important
+					color: color-get($mau-ankhanh, trang) !important
 					border: none
 	.active
 		background: linear-gradient(-90deg, #b18308 0%, #f2da85 100%)
 		a 
-			color: color-get($mau, trang) !important
+			color: color-get($mau-ankhanh, trang) !important
 		border: none
 	.custom-select
 		+fz(1.14rem)
 		+fw(400)
-		color: color-get($mau, xam-4)
+		color: color-get($mau-ankhanh, xam-4)
 		text-transform: uppercase
 		+pad(.5rem 2.14rem)
 		border-radius: 0
-		border-bottom: 1px solid color-get($mau,main-3)
+		border-bottom: 1px solid color-get($mau-ankhanh,main-3)
 		background: linear-gradient(-90deg, #b18308 0%, #f2da85 100%) 
 		text-align-last: center
 	select option
 		text-align: center
 		margin: 40px
-		background: color-get($mau, main)
+		background: color-get($mau-ankhanh, main)
 		color: #fff
 		text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4)
 		border: none
