--- a/lib/ankhanh-recruitment-detail/r-1/index.sass
+++ b/lib/ankhanh-recruitment-detail/r-1/index.sass
@@ -37,10 +37,10 @@ body
 			h1
 				+fz(1.57rem)
 				+fw(600)
-				color: color-get($mau, main)
+				color: color-get($mau-ankhanh, main)
 				+mar(0)
 			.calendar
-				color: color-get($mau, xam-r-c)
+				color: color-get($mau-ankhanh, xam-r-c)
 				+mar(.5rem 0 1rem 0)
 				time, i 
 					+fz(.9rem)
@@ -50,7 +50,7 @@ body
 			+pad(.3rem 1.5rem 0 1.5rem)
 			li 
 				display: flex
-				color: color-get($mau, den)
+				color: color-get($mau-ankhanh, den)
 				font-size: 1.07rem
 				font-weight: 100
 				line-height: 1.7rem
@@ -68,11 +68,11 @@ body
 			font-weight: 100
 			line-height: 2rem
 			margin: 0
-			color: color-get($mau, den)
+			color: color-get($mau-ankhanh, den)
 			&.lead
 				font-size: 1.285rem
 				font-weight: 400 !important
-				color: color-get($mau, den)
+				color: color-get($mau-ankhanh, den)
 		.item-news-read
 			text-decoration: none
 		.social-networks
@@ -99,19 +99,19 @@ body
 				text-align: center
 				cursor: pointer
 			.btn-contact.btn-contact-1
-				background: color-get($mau, xam-3)
+				background: color-get($mau-ankhanh, xam-3)
 				margin-right: 1.5rem
 				a 
-					color: color-get($mau, main)
+					color: color-get($mau-ankhanh, main)
 					text-decoration: none
 					+fz(1.14)
 					+fw(500)
 			.btn-contact.btn-contact-2
 				text-decoration: none
-				background: color-get($mau, main)
+				background: color-get($mau-ankhanh, main)
 				
 				a 
-					color: color-get($mau, trang)
+					color: color-get($mau-ankhanh, trang)
 					text-decoration: none
 					+fz(1.14)
 					+fw(100)
@@ -122,8 +122,8 @@ body
 			+mar(0)
 		.othernews
 			h2
-				background: color-get($mau, main-2)
-				color: color-get($mau, trang)
+				background: color-get($mau-ankhanh, main-2)
+				color: color-get($mau-ankhanh, trang)
 				+fz(1.7rem)
 				+fw(600)
 				margin-bottom: 1.5rem
@@ -135,7 +135,7 @@ body
 					align-items: center
 					justify-content: center
 			h3
-				color: color-get($mau,main)
+				color: color-get($mau-ankhanh,main)
 				+fz(1.4rem)
 				margin-bottom: 0
 		a
@@ -144,12 +144,12 @@ body
 			h3
 				+fz(1.14rem)
 				+fw(100)
-				color: color-get($mau,den)
+				color: color-get($mau-ankhanh,den)
 				+pad(.5rem 0 1rem 0)
 			.calendar
 				+mar(.5rem 0 1rem 0)
 				time, i 
-					color: color-get($mau, xam-r-c)
+					color: color-get($mau-ankhanh, xam-r-c)
 					+fz(.9rem)
 					+fw(200)
 			img 
