--- a/lib/ankhanh-resident-utility/r-1/index.sass
+++ b/lib/ankhanh-resident-utility/r-1/index.sass
@@ -12,7 +12,7 @@ body
 		+fz(2.57rem)
 		margin-bottom: 2rem
 		+fw(600)
-		color: color-get($mau, main)
+		color: color-get($mau-ankhanh, main)
 	// Lưới các ô
 	.gallery-lists
 		+media-breakpoint-up(sm)
@@ -65,7 +65,7 @@ body
 					content: ''
 					display: block
 					z-index: -1
-					background: color-get($mau, main)
+					background: color-get($mau-ankhanh, main)
 					width: 100%
 					height: 100%
 					+pos(abs, 0 0 null null)
@@ -97,7 +97,7 @@ body
 					width: 100%
 					height: 100%
 					h2 
-						color: color-get($mau, trang)
+						color: color-get($mau-ankhanh, trang)
 						+fw(100)
 						+fz(1rem)
 						position: absolute
@@ -119,7 +119,7 @@ body
 						+fw(400)
 						margin-bottom: 2.2rem
 						+transition(all 1s ease-in-out)
-						+text-sha(0 0 .5rem color-get($mau,trang))
+						+text-sha(0 0 .5rem color-get($mau-ankhanh,trang))
 						color: transparent
 						text-align: left
 						+media-breakpoint-down(md)
@@ -139,7 +139,7 @@ body
 							.content
 								+opacity(1)
 								+text-sha(1px 1px 3px rgba(0,0,0,.4))
-								color: color-get($mau,trang)
+								color: color-get($mau-ankhanh,trang)
 								display: -webkit-box
 								-webkit-line-clamp: 5
 								-webkit-box-orient: vertical
@@ -161,7 +161,7 @@ body
 							.content
 								+opacity(1)
 								+text-sha(1px 1px 3px rgba(0,0,0,.4))
-								color: color-get($mau,trang)
+								color: color-get($mau-ankhanh,trang)
 								overflow: hidden
 	&.canhcam-video-fixed-size.lg-outer
 	padding: 0
