--- a/lib/ankhanh-recruitment/r-1/index.pug
+++ b/lib/ankhanh-recruitment/r-1/index.pug
@@ -16,8 +16,8 @@ section.canhcam-ankhanh-recruitment-r-1
 				tr
 					td 
 						.row 
-							.col-xs-12.col-md-11 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
-							.col-xs-4.col-md-1 
+							.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
+							.col-xs-4.col-md-1.offset-1 
 								img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
 					td 01
 					td Hà Nội
@@ -26,8 +26,8 @@ section.canhcam-ankhanh-recruitment-r-1
 				tr
 					td 
 						.row 
-							.col-xs-12.col-md-11 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
-							.col-xs-4.col-md-1 
+							.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
+							.col-xs-4.col-md-1.offset-1 
 								img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
 					td 01
 					td Hà Nội
@@ -36,8 +36,8 @@ section.canhcam-ankhanh-recruitment-r-1
 				tr
 					td 
 						.row 
-							.col-xs-12.col-md-11 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
-							.col-xs-4.col-md-1.no-new
+							.col-xs-12.col-md-10 Nhân viên quản lý phòng tập asd Gym và bể bơi tại Khu đô thị Splendora 
+							.col-xs-4.col-md-1.offset-1.no-new
 								img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
 					td 01
 					td Hà Nội
@@ -46,8 +46,8 @@ section.canhcam-ankhanh-recruitment-r-1
 				tr
 					td 
 						.row 
-							.col-xs-12.col-md-11 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
-							.col-xs-4.col-md-1.no-new
+							.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
+							.col-xs-4.col-md-1.offset-1.no-new
 								img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
 					td 01
 					td Hà Nội
@@ -56,8 +56,8 @@ section.canhcam-ankhanh-recruitment-r-1
 				tr
 					td 
 						.row 
-							.col-xs-12.col-md-11 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
-							.col-xs-4.col-md-1.no-new
+							.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
+							.col-xs-4.col-md-1.offset-1.no-new
 								img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
 					td 01
 					td Hà Nội
