--- a/templates/location.pug
+++ b/templates/location.pug
@@ -7,5 +7,5 @@ block variables
 block header
 	include ../lib/header/h-14/index.pug
 block body
-	include ../lib/slider/s-1/index.pug
+	include ../lib/breadcrumb/b-1/index.pug
 	include ../lib/location/l-1/index.pug
