--- a/lib/ankhanh-recruitment/r-1/index.pug
+++ b/lib/ankhanh-recruitment/r-1/index.pug
@@ -17,7 +17,7 @@ section.canhcam-ankhanh-recruitment-r-1
 					td 
 						.row 
 							.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
-							.col-xs-4.col-md-1.offset-1 
+							.col-xs-4.col-md-2 
 								img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
 					td 01
 					td Hà Nội
@@ -27,7 +27,7 @@ section.canhcam-ankhanh-recruitment-r-1
 					td 
 						.row 
 							.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
-							.col-xs-4.col-md-1.offset-1 
+							.col-xs-4.col-md-2 
 								img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
 					td 01
 					td Hà Nội
@@ -36,8 +36,8 @@ section.canhcam-ankhanh-recruitment-r-1
 				tr
 					td 
 						.row 
-							.col-xs-12.col-md-10 Nhân viên quản lý phòng tập asd Gym và bể bơi tại Khu đô thị Splendora 
-							.col-xs-4.col-md-1.offset-1.no-new
+							.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
+							.col-xs-4.col-md-2.no-new
 								img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
 					td 01
 					td Hà Nội
@@ -47,7 +47,7 @@ section.canhcam-ankhanh-recruitment-r-1
 					td 
 						.row 
 							.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
-							.col-xs-4.col-md-1.offset-1.no-new
+							.col-xs-4.col-md-2.no-new
 								img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
 					td 01
 					td Hà Nội
@@ -57,7 +57,7 @@ section.canhcam-ankhanh-recruitment-r-1
 					td 
 						.row 
 							.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
-							.col-xs-4.col-md-1.offset-1.no-new
+							.col-xs-4.col-md-2.no-new
 								img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
 					td 01
 					td Hà Nội
