--- a/lib/ankhanh-recruitment/r-2/index.sass
+++ b/lib/ankhanh-recruitment/r-2/index.sass
@@ -26,6 +26,8 @@ section.canhcam-ankhanh-recruitment-r-2
 				0 1rem
 			+media-breakpoint-down(md)
 				+mar(1rem)
+				&:first-child
+					margin-bottom: 2rem !important
 		.c
 			background: color-get($mau, trang)
 			width: 100%
