update padding table

--- a/lib/ankhanh-recruitment/r-1/index.sass
+++ b/lib/ankhanh-recruitment/r-1/index.sass
@@ -48,6 +48,7 @@ section.canhcam-ankhanh-recruitment-r-1
 					+media-breakpoint-up(md)
 						&:first-child
 							text-align: left
+							+pad(1rem null)
 							padding-left: 3rem
 						&:last-child
 							padding-right: 3rem
