update recruitment detail

--- a/lib/ankhanh-recruitment-detail/r-1/index.sass
+++ b/lib/ankhanh-recruitment-detail/r-1/index.sass
@@ -12,6 +12,7 @@ body
 		text-align: start
 		table 
 			border: none
+			margin-bottom: 2.42rem
 			tr 
 				border: none
 				th.first 
@@ -148,6 +149,9 @@ body
 				+pad(.5rem 0 1rem 0)
 			.calendar
 				+mar(.5rem 0 1rem 0)
+				// +media-breakpoint-down(md)
+				// 	padding-left: 1rem
+				// 	padding-right: 1rem
 				time, i 
 					color: color-get($mau-ankhanh, xam-r-c)
 					+fz(.9rem)
